--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,12 +15,12 @@ jobs:
       - checkout
       - run: npm i
       - run: npm run test
-  # analyze:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - run: npm audit
+  analyze:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run: npm audit
 
 workflows:
   my_workflow:
@@ -29,6 +29,6 @@ workflows:
       - test:
           requires:
             - build
-      # - analyze:
-      #     requires:
-      #       - test
+      - analyze:
+          requires:
+            - test
