--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,13 +22,13 @@ jobs:
   #     - checkout
   #     - run: npm audit
 
-workflows:
-  my_workflow:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
+# workflows:
+#   my_workflow:
+#     jobs:
+#       - build
+#       - test:
+#           requires:
+#             - build
       # - analyze:
       #     requires:
       #       - test
