--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,14 +16,14 @@ jobs:
       - run: npm i
       - run: npm run test
       - run:
-          name: Add back-end ip to ansible inventory
+          name: Add ip to ansible inventory
           command: |
-            BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+            PUBLIC_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
-            echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
-            cat .circleci/ansible/inventory.txt
+            echo PUBLIC_IP >> inventory
+            cat inventory
       - persist_to_workspace:
           root: ~/
           paths:
@@ -38,10 +38,10 @@ jobs:
 workflows:
   my_workflow:
     jobs:
-      - build
-      - test:
-          requires:
-            - build
+      # - build
+      - test
+          # requires:
+          #   - build
       # - analyze:
       #     requires:
       #       - test
