--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,13 +21,11 @@ jobs:
             PUBLIC_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)
-            echo PUBLIC_IP >> inventory
-            cat inventory
+              --output text) >> inventory
       - persist_to_workspace:
           root: ~/
           paths:
-            - project/.circleci/ansible/inventory.txt
+            - inventory
   analyze:
     docker:
       - image: circleci/node:13.8.0
